# akasha

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
.claude/: CONTEXT.md  GOWA_INTEGRATION.md  settings.local.json
.claude/skills/update-context/: SKILL.md
.claude/skills/update-gowa/: SKILL.md
docs/: GOWA_INTEGRATION.md
experiment/: test_api.ipynb
src/: __init__.py  main.py
src/core/: __init__.py  background_tasks.py  config.py  logging.py  message_cache.py  rate_limiter.py  scheduler.py  vector_store.py
src/core/gowa/: __init__.py  client.py  models.py
src/llm/: __init__.py  base.py  gemini.py  key_rotator.py  openai.py  openrouter.py
src/services/: __init__.py
src/services/chat_summarizer/: __init__.py  models.py  router.py  service.py
src/services/mandarin_generator/: __init__.py  models.py  router.py  service.py  tasks.py
src/services/reply_agent/: __init__.py  models.py  router.py  service.py  tools.py
src/utils/: __init__.py  web_scraper.py
