[project]
name = "akasha"
version = "0.1.0"
description = "Multi-Service WhatsApp Platform - Daily Mandarin passages and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.2.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
